Avoid zoom on input focus on mobile

--- a/src/styles/base/reset.scss
+++ b/src/styles/base/reset.scss
@@ -12,3 +12,11 @@ html.transition *:after {
   transition: all 750ms !important;
   transition-delay: 0 !important;
 }
+
+@media screen and (max-width: 767px) {
+  input,
+  select,
+  textarea {
+    font-size: 16px;
+  }
+}
