--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -11,7 +11,6 @@
     padding-left: 50px;
     padding-right: 30px;
     color: $DarkGrayishBlue;
-    font-size: 14px;
 
     @media screen and (min-width: $mobile-breakpoint) {
       border-radius: 6px;
